@@ -23,12 +23,7 @@ public enum Role {
             )
     ),
     CUSTOMER(
-            Set.of(
-                    CUSTOMER_READ,
-                    CUSTOMER_CREATE,
-                    CUSTOMER_DELETE,
-                    CUSTOMER_UPDATE
-            )
+            Collections.emptySet()
     )
     ;
 
